loaded data into pandas dataframe

--- a/cpa01.ipynb
+++ b/cpa01.ipynb
@@ -4,6 +4,455 @@
    "cell_type": "markdown",
    "id": "a00245be",
    "metadata": {},
+   "source": [
+    "# Worldbank Data on Region"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4775c29f",
+   "metadata": {},
+   "source": [
+    "Using data comes from below regions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c06c378f",
+   "metadata": {},
+   "source": [
+    "* North America\n",
+    "* European Union\n",
+    "* South Asia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1a643b6",
+   "metadata": {},
+   "source": [
+    "Import libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "42dba04a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9ee3dd91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Indicator Name</th>\n",
+       "      <th>Indicator Code</th>\n",
+       "      <th>1960</th>\n",
+       "      <th>1961</th>\n",
+       "      <th>1962</th>\n",
+       "      <th>1963</th>\n",
+       "      <th>1964</th>\n",
+       "      <th>1965</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>Unnamed: 65</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Internally displaced persons, new displacement...</td>\n",
+       "      <td>VC.IDP.NWDS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.010000e+05</td>\n",
+       "      <td>3.080000e+05</td>\n",
+       "      <td>3.980000e+04</td>\n",
+       "      <td>7.600000e+04</td>\n",
+       "      <td>1.200000e+06</td>\n",
+       "      <td>1.771000e+06</td>\n",
+       "      <td>1.266000e+06</td>\n",
+       "      <td>9.570000e+05</td>\n",
+       "      <td>1.740050e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Merchandise exports to low- and middle-income ...</td>\n",
+       "      <td>TX.VAL.MRCH.R3.ZS</td>\n",
+       "      <td>13.308599</td>\n",
+       "      <td>12.823959</td>\n",
+       "      <td>11.921267</td>\n",
+       "      <td>11.129143</td>\n",
+       "      <td>11.457571</td>\n",
+       "      <td>10.817422</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.846202e+01</td>\n",
+       "      <td>1.862607e+01</td>\n",
+       "      <td>1.879614e+01</td>\n",
+       "      <td>1.899456e+01</td>\n",
+       "      <td>1.880176e+01</td>\n",
+       "      <td>1.886043e+01</td>\n",
+       "      <td>1.912085e+01</td>\n",
+       "      <td>1.874249e+01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Medium and high-tech exports (% manufactured e...</td>\n",
+       "      <td>TX.MNF.TECH.ZS.UN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Merchandise imports from low- and middle-incom...</td>\n",
+       "      <td>TM.VAL.MRCH.OR.ZS</td>\n",
+       "      <td>26.444098</td>\n",
+       "      <td>25.383333</td>\n",
+       "      <td>24.621123</td>\n",
+       "      <td>24.381797</td>\n",
+       "      <td>23.792258</td>\n",
+       "      <td>21.176526</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.604858e+01</td>\n",
+       "      <td>4.558559e+01</td>\n",
+       "      <td>4.521072e+01</td>\n",
+       "      <td>4.628765e+01</td>\n",
+       "      <td>4.679283e+01</td>\n",
+       "      <td>4.757890e+01</td>\n",
+       "      <td>4.738733e+01</td>\n",
+       "      <td>4.576980e+01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Tariff rate, applied, simple mean, primary pro...</td>\n",
+       "      <td>TM.TAX.TCOM.SM.AR.ZS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1438</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Transport services (% of service exports, BoP)</td>\n",
+       "      <td>BX.GSR.TRAN.ZS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.314795e+01</td>\n",
+       "      <td>1.277806e+01</td>\n",
+       "      <td>1.227282e+01</td>\n",
+       "      <td>1.130387e+01</td>\n",
+       "      <td>1.082568e+01</td>\n",
+       "      <td>1.073384e+01</td>\n",
+       "      <td>1.105655e+01</td>\n",
+       "      <td>1.060698e+01</td>\n",
+       "      <td>8.365044e+00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1439</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Portfolio investment, net (BoP, current US$)</td>\n",
+       "      <td>BN.KLT.PTXL.CD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1440</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Charges for the use of intellectual property, ...</td>\n",
+       "      <td>BM.GSR.ROYL.CD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.597319e+10</td>\n",
+       "      <td>4.710626e+10</td>\n",
+       "      <td>4.928592e+10</td>\n",
+       "      <td>4.591925e+10</td>\n",
+       "      <td>5.354993e+10</td>\n",
+       "      <td>5.624763e+10</td>\n",
+       "      <td>5.546758e+10</td>\n",
+       "      <td>5.481847e+10</td>\n",
+       "      <td>5.669066e+10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1441</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Rural land area (sq. km)</td>\n",
+       "      <td>AG.LND.TOTL.RU.K2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1442</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>NAC</td>\n",
+       "      <td>Agricultural land (% of land area)</td>\n",
+       "      <td>AG.LND.AGRI.ZS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.102815</td>\n",
+       "      <td>27.932820</td>\n",
+       "      <td>27.816348</td>\n",
+       "      <td>27.706338</td>\n",
+       "      <td>27.557259</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.544309e+01</td>\n",
+       "      <td>2.547715e+01</td>\n",
+       "      <td>2.551121e+01</td>\n",
+       "      <td>2.554532e+01</td>\n",
+       "      <td>2.557905e+01</td>\n",
+       "      <td>2.560774e+01</td>\n",
+       "      <td>2.561740e+01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1443 rows × 66 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country Name Country Code  \\\n",
+       "0     North America          NAC   \n",
+       "1     North America          NAC   \n",
+       "2     North America          NAC   \n",
+       "3     North America          NAC   \n",
+       "4     North America          NAC   \n",
+       "...             ...          ...   \n",
+       "1438  North America          NAC   \n",
+       "1439  North America          NAC   \n",
+       "1440  North America          NAC   \n",
+       "1441  North America          NAC   \n",
+       "1442  North America          NAC   \n",
+       "\n",
+       "                                         Indicator Name        Indicator Code  \\\n",
+       "0     Internally displaced persons, new displacement...           VC.IDP.NWDS   \n",
+       "1     Merchandise exports to low- and middle-income ...     TX.VAL.MRCH.R3.ZS   \n",
+       "2     Medium and high-tech exports (% manufactured e...     TX.MNF.TECH.ZS.UN   \n",
+       "3     Merchandise imports from low- and middle-incom...     TM.VAL.MRCH.OR.ZS   \n",
+       "4     Tariff rate, applied, simple mean, primary pro...  TM.TAX.TCOM.SM.AR.ZS   \n",
+       "...                                                 ...                   ...   \n",
+       "1438     Transport services (% of service exports, BoP)        BX.GSR.TRAN.ZS   \n",
+       "1439       Portfolio investment, net (BoP, current US$)        BN.KLT.PTXL.CD   \n",
+       "1440  Charges for the use of intellectual property, ...        BM.GSR.ROYL.CD   \n",
+       "1441                           Rural land area (sq. km)     AG.LND.TOTL.RU.K2   \n",
+       "1442                 Agricultural land (% of land area)        AG.LND.AGRI.ZS   \n",
+       "\n",
+       "           1960       1961       1962       1963       1964       1965  ...  \\\n",
+       "0           NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "1     13.308599  12.823959  11.921267  11.129143  11.457571  10.817422  ...   \n",
+       "2           NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "3     26.444098  25.383333  24.621123  24.381797  23.792258  21.176526  ...   \n",
+       "4           NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "...         ...        ...        ...        ...        ...        ...  ...   \n",
+       "1438        NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "1439        NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "1440        NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "1441        NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "1442        NaN  28.102815  27.932820  27.816348  27.706338  27.557259  ...   \n",
+       "\n",
+       "              2012          2013          2014          2015          2016  \\\n",
+       "0     9.010000e+05  3.080000e+05  3.980000e+04  7.600000e+04  1.200000e+06   \n",
+       "1     1.846202e+01  1.862607e+01  1.879614e+01  1.899456e+01  1.880176e+01   \n",
+       "2              NaN           NaN           NaN           NaN           NaN   \n",
+       "3     4.604858e+01  4.558559e+01  4.521072e+01  4.628765e+01  4.679283e+01   \n",
+       "4              NaN           NaN           NaN           NaN           NaN   \n",
+       "...            ...           ...           ...           ...           ...   \n",
+       "1438  1.314795e+01  1.277806e+01  1.227282e+01  1.130387e+01  1.082568e+01   \n",
+       "1439           NaN           NaN           NaN           NaN           NaN   \n",
+       "1440  4.597319e+10  4.710626e+10  4.928592e+10  4.591925e+10  5.354993e+10   \n",
+       "1441           NaN           NaN           NaN           NaN           NaN   \n",
+       "1442  2.544309e+01  2.547715e+01  2.551121e+01  2.554532e+01  2.557905e+01   \n",
+       "\n",
+       "              2017          2018          2019          2020  Unnamed: 65  \n",
+       "0     1.771000e+06  1.266000e+06  9.570000e+05  1.740050e+06          NaN  \n",
+       "1     1.886043e+01  1.912085e+01  1.874249e+01           NaN          NaN  \n",
+       "2              NaN           NaN           NaN           NaN          NaN  \n",
+       "3     4.757890e+01  4.738733e+01  4.576980e+01           NaN          NaN  \n",
+       "4              NaN           NaN           NaN           NaN          NaN  \n",
+       "...            ...           ...           ...           ...          ...  \n",
+       "1438  1.073384e+01  1.105655e+01  1.060698e+01  8.365044e+00          NaN  \n",
+       "1439           NaN           NaN           NaN           NaN          NaN  \n",
+       "1440  5.624763e+10  5.546758e+10  5.481847e+10  5.669066e+10          NaN  \n",
+       "1441           NaN           NaN           NaN           NaN          NaN  \n",
+       "1442  2.560774e+01  2.561740e+01           NaN           NaN          NaN  \n",
+       "\n",
+       "[1443 rows x 66 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "na_df = pd.read_csv('data/NorthAmerica-worldbank-data/NorthAmerica_data.csv',skiprows=3)\n",
+    "eu_df = pd.read_csv('data/EuropeanUnion-worldbank-data/EuropeanUnion_data.csv',skiprows=3)\n",
+    "sa_df = pd.read_csv('data/SouthAsia-worldbank-data/SouthAsia_data.csv',skiprows=3)\n",
+    "na_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c2ae399",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
